--- a/programs/account-compression/Cargo.toml
+++ b/programs/account-compression/Cargo.toml
@@ -18,7 +18,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0" }
+anchor-lang = "0.29.0"
 bytemuck = "1.13"
 mpl-noop = { version = "0.2.1", path = "../noop", features = ["no-entrypoint"] }
 solana-program = ">=1.18.11, <2"
