--- a/programs/account-compression/Cargo.toml
+++ b/programs/account-compression/Cargo.toml
@@ -22,7 +22,6 @@ anchor-lang = "0.29.0"
 bytemuck = "1.13"
 mpl-noop = { version = "0.2.1", path = "../noop", features = ["no-entrypoint"] }
 solana-program = ">=1.18.11, <2"
-spl-concurrent-merkle-tree = { version = "0.4.1" }
-
+spl-concurrent-merkle-tree = { version = "0.3.0", path = "../../libraries/concurrent-merkle-tree" }
 [profile.release]
 overflow-checks = true
